syntax = "proto2";

package rasctl_interface;

message CommandResult {
    required bool status = 1;
    required string msg = 2;
}
